--- a/index.html
+++ b/index.html
@@ -2,27 +2,25 @@
 <html lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CYHNP9FG6H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CYHNP9FG6H');
+</script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>嘉诚的平凡特写</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>深夜客棧</title>
 
   <!-- Favicons -->
   <link href="assets/img/icon.JPG" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -32,48 +30,153 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200&display=swap" rel="stylesheet">
 	
-  <!-- =======================================================
-  * Template Name: Personal - v4.3.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="container">
+	<section class="blogpage">
+		<div class="container">
 
-      <h1><a href="index.html">JC CHAN <span style="font-family: 'Ma Shan Zheng',cursive;">曾嘉诚</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>马来西亚柔佛州 | 峇株巴辖 <br><br><span>学生</span> | <span>程序员</span> | <span>摄影师</span></h2>
+      <div class="section-title">
+        <h2>BLOG</h2>
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link active" href="#header">主页</a></li>
-          <li><a class="nav-link" href="about.html">关于我</a></li>
-          <li><a class="nav-link" href="blog.html">部落格</a></li>
-          <li><a class="nav-link" href="portfolio.html">作品集</a></li>
-          <li><a class="nav-link" href="contact.html">联系</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-      <div class="social-links">
-        <a href="https://www.facebook.com/jcheng.chan" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/jcheng0210/" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a href="https://goo.gl/maps/5PiPrHwn6Y1d9f698" target="_blank"><i class="bx bx-map-pin"></i></a>
       </div>
+	
+	  <div class="w3-content" style="max-width:1400px">
 
-    </div>
-  </header><!-- End Header -->
+<!-- Header -->
+	<header class="w3-container w3-center w3-padding-32">
+	  <span style="font-size:50pt;font-family: Noto Serif JP,serif"><b>深夜客棧</b></span>
+	  <h4 style="font-family: Noto Serif JP,serif">黎明到來前的客棧，永不打烊。用每一個深夜，寫下過客故事</h4>
+	</header>
 
+	<!-- Grid -->
+	<div class="w3-row" style="font-family: Noto Serif JP,serif">
 
-  <!-- Vendor JS Files -->
+	<!-- Blog entries -->
+	<div class="w3-col l8 s12">
+	  <!-- Blog entry -->
+	  <div class="w3-card-4 w3-margin w3-light-gray">
+		<img src="assets/img/blog/blog1.JPG" alt="blog1" style="width:100%">
+		<div class="w3-container">
+		  <h3 style="font-family: Noto Serif JP,serif"><b>同温</b></h3>
+			<p>希望我們都能跨越同溫層</p>
+		  <h5><span class="w3-opacity" style="font-family: Noto Serif JP,serif">August 21, 2020</span></h5>
+		</div>
+
+		<div class="w3-container">
+		  <p>幾經波折，才算跟上了目前的生活步調。
+
+常常提醒自己這社會每個人都有自己面對的事情，可能相似、可能相關、可能天差地遠，但都有不同的消化方式。
+
+大大小小的情緒在這段時間佔據了自己生活很大的空間。于我，不太願意去浪費時間生氣在小事上，也不喜歡隨便宣洩情緒，畢竟，沒有人有義務吸收自己的負面情緒。
+</p>
+		  <div class="w3-row">
+			<div class="w3-col m8 s12">
+			<div class="portfolio-links">
+			 <p style="font-family: Noto Serif JP,serif"><button class="w3-button w3-padding-large w3-white w3-border blog-button">
+<a href="blog-1.html" data-gallery="blogGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Blog Details"><span>阅读更多</span></a></button></p>
+			</div>
+			</div>
+		
+			<div class="w3-col m4 w3-hide-small">
+		<!--	  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-tag">0</span></span></p> -->
+			</div>
+		  </div>
+		</div>
+	  </div>
+	  <hr>
+
+	  <!-- Blog entry -->
+	  <div class="w3-card-4 w3-margin w3-light-gray">
+	  <img src="assets/img/blog/blog2.jpg" alt="blog2" style="width:100%">
+		<div class="w3-container">
+		  <h3 style="font-family: Noto Serif JP,serif"><b>記·2019</b></h3>
+			<p>365個拼湊的日夜</p>
+		  <h5><span class="w3-opacity" style="font-family: Noto Serif JP,serif">December 31, 2019</span></h5>
+		</div>
+
+		<div class="w3-container">
+		  <p>2019，多事之秋的一年，快結束了。
+
+2019年，經歷了很多，喜憂參半吧，得到與失去是今年最大的禮物。但，也許就是這樣，人才會不斷在成長，因為它們也是成長的必修課。
+
+2019年，要做的事情越來越多，也許還是那句話，年歲漸長，要經歷和承擔的責任也越大，很感謝這樣，進一步為自己的人生添上另一份精彩。
+			</p>
+		  <div class="w3-row">
+			<div class="w3-col m8 s12">
+			<div class="portfolio-links">
+			 <p style="font-family: Noto Serif JP,serif"><button class="w3-button w3-padding-large w3-white w3-border blog-button">
+<a href="blog-2.html" data-gallery="blogGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Blog Details"><span>阅读更多</span></a></button></p>
+			</div>
+			</div>
+			<div class="w3-col m4 w3-hide-small">
+	<!--  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p> -->
+			</div>
+		  </div>
+		</div>
+	  </div>
+	<!-- END BLOG ENTRIES -->
+	</div>
+
+	<!-- Introduction menu -->
+	<div class="w3-col l4">
+	  <div class="w3-card w3-margin w3-container w3-center">
+		<audio controls autoplay loop>
+			<source src="assets/an_friend.mp3" type="audio/mpeg">
+		</audio>
+		<h6 style="font-family: Noto Serif JP,serif">邀請你，聽著音樂，看著我的部落格。</h6>
+		</div>
+		<hr>
+	  <!-- About Card -->
+	  <div class="w3-card w3-margin w3-margin-top">
+		<div class="w3-container w3-light-gray">
+		  <p style="font-family: Noto Serif JP,serif">客棧，顧名思義就是給旅客休息的地方。一家客棧的旅客來來往往，就好像人生的道路一樣永無止境，人不停地奔跑，永不停歇。<br><br>想把某些東西留下，等待某天的念舊。</p>
+		</div>
+	  </div><hr>
+
+	  <!-- Posts -->
+	  <div class="w3-card w3-margin" style="border:ridge">
+		<div class="w3-container w3-padding">
+		  <h4 style="font-family: Noto Serif JP,serif;">熱門帖子<i class="bx bx-trending-up"></i></h4>
+		</div>
+		<ul class="w3-ul w3-hoverable w3-white">
+		  <li class="w3-padding-16">
+			<img src="assets/img/blog/blog3.JPG" alt="blog3" class="w3-left w3-margin-right" style="width:80px;">
+			<a href="blog-3.html" target="_blank" style="color:black;" data-gallery="blogGallery" data-glightbox="type: external" class="portfolio-details-lightbox">
+				<span class="w3-large" style="font-family: Noto Serif JP,serif">他、她</span></a><br>
+			<span style="font-family: Noto Serif JP,serif">勇者無敵</span>
+		  </li>
+		  <li class="w3-padding-16">
+			<img src="assets/img/blog/blog4.JPG" alt="blog4" class="w3-left w3-margin-right" style="width:80px">
+			<a href="blog-4.html" target="_blank" style="color:black;" data-gallery="blogGallery" data-glightbox="type: external" class="portfolio-details-lightbox">
+				<span class="w3-large">和時代</span></a><br>
+			<span>一個“時代”的落幕</span>
+		  </li> 
+		  <li class="w3-padding-16">
+			<img src="assets/img/blog/blog5.JPG" alt="blog5" class="w3-left w3-margin-right" style="width:80px">
+			<a href="blog-5.html" target="_blank" style="color:black;" data-gallery="blogGallery" data-glightbox="type: external" class="portfolio-details-lightbox">
+				<span class="w3-large">歲歲平安</span></a><br>
+			<span>健健康康，平平安安&nbsp;</span>
+		  </li>   
+		</ul>
+	  </div>
+	  <hr> 
+		
+	<!-- END Introduction Menu -->
+	</div>
+
+	<!-- END GRID -->
+	</div><br>
+
+	<!-- END w3-content -->
+	</div>
+  </div>
+</section>
+	
+	  <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
@@ -84,7 +187,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+	
 </body>
-
 </html>
